Exam/mes_exams/exam02/traces/3-0-max.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1r3p3.42.fr
Darwin 16.7.0 x86_64
$> date
Fri Feb 23 19:31:51 CET 2018
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.38)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.38)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2018/piscine-c-exam02/exam_20180223/wabousfi

= Git history ==================================================================
$> git -C /var/folders/j5/1zlpsmzj7qv9gwbqlqy8t8p40000gq/T/tmp3iYdCY/user log --pretty='%H - %an, %ad : %s'
91ee133718300ef2c9709d09dcafa4a5b2fff550 - Exam 42, Fri Feb 23 19:31:44 2018 +0100 : failmax.c
b9281b13dabc65f94f8c440a3faa5c4069ef4a57 - Exam 42, Fri Feb 23 19:21:20 2018 +0100 : rev_print
47cf7f155494231734a523e53e1b387d63ed1ad4 - Exam 42, Fri Feb 23 19:17:44 2018 +0100 : fail
91b95caab9d6ddf15e8d03b3be8d28b20ce1ae82 - Exam 42, Fri Feb 23 18:20:13 2018 +0100 : ftcountdown
cd4b360455c5ad3503c64a3f95131f54851ec597 - Exam 42, Fri Feb 23 18:16:22 2018 +0100 : 1push quesitonnaire
 
= Collected files ==========================================
$> ls -lAR /var/folders/j5/1zlpsmzj7qv9gwbqlqy8t8p40000gq/T/tmp3iYdCY/user
total 8
-rw-r--r--  1 deepthought  deepthought  1152 Feb 23 19:31 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Feb 23 19:31 ft_countdown
drwxr-xr-x  3 deepthought  deepthought   102 Feb 23 19:31 max
drwxr-xr-x  3 deepthought  deepthought   102 Feb 23 19:31 rev_print
drwxr-xr-x  3 deepthought  deepthought   102 Feb 23 19:31 rotone
drwxr-xr-x  3 deepthought  deepthought   102 Feb 23 19:31 survey

/var/folders/j5/1zlpsmzj7qv9gwbqlqy8t8p40000gq/T/tmp3iYdCY/user/ft_countdown:
total 8
-rw-r--r--  1 deepthought  deepthought  79 Feb 23 19:31 ft_countdown.c

/var/folders/j5/1zlpsmzj7qv9gwbqlqy8t8p40000gq/T/tmp3iYdCY/user/max:
total 8
-rw-r--r--  1 deepthought  deepthought  279 Feb 23 19:31 max.c

/var/folders/j5/1zlpsmzj7qv9gwbqlqy8t8p40000gq/T/tmp3iYdCY/user/rev_print:
total 8
-rw-r--r--  1 deepthought  deepthought  325 Feb 23 19:31 rev_print.c

/var/folders/j5/1zlpsmzj7qv9gwbqlqy8t8p40000gq/T/tmp3iYdCY/user/rotone:
total 8
-rw-r--r--  1 deepthought  deepthought  1018 Feb 23 19:31 rotone.c

/var/folders/j5/1zlpsmzj7qv9gwbqlqy8t8p40000gq/T/tmp3iYdCY/user/survey:
total 8
-rw-r--r--  1 deepthought  deepthought  401 Feb 23 19:31 reponses
 
= max ==========================================================================
$> clang -Wextra -Wall -Werror main.c max.c -o user_exe 
max.c:3:24: error: use of undeclared identifier 'NULL'
        len = 0;int *compar = NULL;     
                              ^
max.c:4:15: error: use of undeclared identifier 'NULL'
        if(tab[len]==NULL)
                     ^
2 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
